Updated openapi.yml
- Modified GET /v2/evc/ to accept metadata.extra=data
